--- a/DOM.js/index.html
+++ b/DOM.js/index.html
@@ -12,20 +12,6 @@
     <p id="mypage">Old page</p>
     <button id="myBtn">Try it!</button>
     <button id="mouse">Mouse</button>
-    <script>
-        document.getElementById("mypage").innerHTML = "New Page";
-        document.getElementById("myBtn").onclick = displayDate;
-            function displayDate() {
-                document.getElementById("mypage").innerHTML = Date();
-            } 
-        myBtn.addEventListener("click", myfunction)
-            function myfunction(){
-                alert("Hello world!")
-            }
-        mouse.addEventListener("mouseover", mysecondfunction) 
-            function mysecondfunction(){
-                alert("Click It")
-            }    
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
